<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.5.13</version>
    <relativePath /> <!-- lookup parent from repository -->
  </parent>
  <groupId>org.adultofuncional</groupId>
  <artifactId>adulto-funcional-server</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>adulto-funcional-server</name>
  <description>Backend Spring Boot 3 con arquitectura limpia (Clean Architecture) para gestión financiera personal, agenda y almacenamiento seguro de contraseñas. Autenticación JWT + Argon2, UUID v7, MariaDB y Flyway.</description>
  <url>https://github.com/adulto-funcional/adulto-funcional-server</url>
  <licenses>
    <license>
      <name>Proprietary License</name>
    </license>
  </licenses>
  <developers>
    <developer>
      <name>Jeronimo Ospina</name>
    </developer>
    <developer>
      <name>Miguel Angel Blandon Montes</name>
    </developer>
    <developer>
      <name>Lidys Esther Jaraba</name>
    </developer>
    <developer>
      <name>Daniel Salazar</name>
    </developer>
    <developer>
      <name>Juan Sebastian Rios</name>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/adulto-funcional/adulto-funcional-server.git</connection>
    <developerConnection>scm:git:https://github.com/adulto-funcional/adulto-funcional-server.git</developerConnection>
    <url>https://github.com/adulto-funcional/adulto-funcional-server</url>
    <tag>HEAD</tag>
  </scm>
  <properties>
    <java.version>21</java.version>
  </properties>

  <dependencies>
    <!-- ============================================ -->
    <!-- Spring Boot starters (núcleo de la aplicación) -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- ============================================ -->
    <!-- Persistencia y migraciones (MariaDB + Flyway) -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
    </dependency>

    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-mysql</artifactId>
    </dependency>

    <!-- ============================================ -->
    <!-- Seguridad (Bouncy Castle para Argon2 y otros) -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.78.1</version>
    </dependency>

    <!-- ============================================ -->
    <!-- dependencias para JWT -->
    <!-- ============================================ -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-api</artifactId>
      <version>0.12.6</version>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-impl</artifactId>
      <version>0.12.6</version>
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt-jackson</artifactId>
      <version>0.12.6</version>
      <scope>runtime</scope>
    </dependency>

    <!-- ============================================ -->
    <!-- Generación de UUID v7 -->
    <!-- ============================================ -->
    <dependency>
      <groupId>com.fasterxml.uuid</groupId>
      <artifactId>java-uuid-generator</artifactId>
      <version>5.1.0</version>
    </dependency>

    <!-- ============================================ -->
    <!-- Utilidades (HTML parsing, etc.) -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.17.2</version>
    </dependency>

    <!-- ============================================ -->
    <!-- Lombok -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- ============================================ -->
    <!-- Herramientas de desarrollo (hot reload) -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>

    <!-- ============================================ -->
    <!-- Monitoreo y healthcheck (actuator para Docker) -->
    <!-- ============================================ -->
    <!-- dependencia para healthcheck en Docker -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>

    <!-- ============================================ -->
    <!-- dependencias para testing -->
    <!-- ============================================ -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>mariadb</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <executions>
          <execution>
            <id>default-compile</id>
            <phase>compile</phase>
            <goals>
              <goal>compile</goal>
            </goals>
            <configuration>
              <annotationProcessorPaths>
                <path>
                  <groupId>org.projectlombok</groupId>
                  <artifactId>lombok</artifactId>
                </path>
              </annotationProcessorPaths>
            </configuration>
          </execution>
          <execution>
            <id>default-testCompile</id>
            <phase>test-compile</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
            <configuration>
              <annotationProcessorPaths>
                <path>
                  <groupId>org.projectlombok</groupId>
                  <artifactId>lombok</artifactId>
                </path>
              </annotationProcessorPaths>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.flywaydb</groupId>
        <artifactId>flyway-maven-plugin</artifactId>
        <configuration>
          <url>${env.SPRING_DATASOURCE_URL}</url>
          <user>${env.SPRING_DATASOURCE_USERNAME}</user>
          <password>${env.SPRING_DATASOURCE_PASSWORD}</password>
          <locations>${env.SPRING_FLYWAY_LOCATIONS}</locations>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <outputDirectory>${project.basedir}/doc</outputDirectory>
        </configuration>
      </plugin>

    </plugins>
  </build>

</project>
